# PDF-RAG

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  query_cli.py
app/: config.py  logging_config.py  main.py
app/models/: schemas.py
app/routers/: query.py  upsert.py
app/services/: database.py  embedding_service.py  llm_service.py  pdf_parser.py  vector_search.py
