[tool.poetry]
name = "rag-prototype"
version = "0.1.0"
description = "A RAG prototype API for PDFs"
authors = ["hjedwardkim"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
pypdf2 = "^3.0.1"
openai = "^1.46.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
pgvector = "^0.3.3"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

